working on accesibility

--- a/chapter.tex
+++ b/chapter.tex
@@ -4,7 +4,9 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows, decorations.markings}
 \usepackage[utf8]{inputenc}
-
+\usepackage{graphicx}
+\usepackage{verbatim}
+\graphicspath{ {images/} }
 \journal{Intelligent Environmental Data Analysis and Pollution Management}
 
 \begin{document}
@@ -24,6 +26,8 @@
 \input{contents/abstract} 
 \end{abstract}
 \end{frontmatter}
+\newpage
+\listoffigures
 \newpage
 \input{contents/introduction} 
 \input{contents/accessible} 
