adding points to relevant section

--- a/contents/accessible/evaluation.tex
+++ b/contents/accessible/evaluation.tex
@@ -1,2 +1,6 @@
-\subsection*{}
+\subsubsection{Evaluacion}
+Ofrecerles a los usuarios una pagina web libre de cargos, facilita que el usuario acceda directamente a la informacion
+sin tener que realizar ninguna descarga. Al eliminar esta barrera, el usuario nos da un punto de confianza.
+
+
 Evaluation - Repect the concept to prove and the technics applied on Aire Guru, is it correct? good point, bad points.....
