--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -43,4 +43,7 @@ Al represnentar la informacion sera incluido lo basicamente necesario, huyendo s
 \item formato adecuado para un amplio espectro de usuarios
 \item Crear familiaridad
 \item Flexibilidad de seleccion de subdata
+\item No decoracion que ensucie o distraiga de la informacion principal
+\item Consecuente, que siga una secuencia logica
+\item Estudio de las representaciones mas adecuadas para cada tipo de datos
   \end{itemize}
