--- a/contents/relevant/theory.tex
+++ b/contents/relevant/theory.tex
@@ -1,11 +1,52 @@
 \subsection*{}
+Una buena representacion de los datos no consiste en presentarlos todos para que el usuario tenga la mayor informacion posible,
+consiste en mostrarle los datos necesarios para que pueda hacer una lectura directa de la situacion.//
+
+En este apartado veremos el refinado de los datos para ofrecer al usuario una informacion relevante y de calidad.
+
+\subsection{Diseno}
+Para realizar una buena seleccion de los datos que son relevantes o la combinacion de estos, es imprescindible unos 
+conocimientos solidos sobre la materia a tratar. Por ello, es fundamental dedicarle el tiempo necesario para enter la
+importancia de los datos y que beneficios nos puede aportar.
+
+--cual es el objetivo?
+--Como llegar a el?
+--Que se debe enfatizar?
+--Buscar puntos importantes
+--Contar con ayuda si es necesario
+--equipo multidisciplinar
+
+
+\subsection{Calidad de los datos}
+
+Una vez estipulados los campos que se requieren de la fuende de datos de origen, hay que serciorarse de que 
+cada campo y valor, cumplen las siguientes premisas:
+    \begin{itemize}
+        \item \textbf{Credibilidad}. La fuente de datos debe ser fiable. Es decir, la fuente de origen debera
+         proporcionar la informacion necesaria de como se han recogido los datos.
+        \item \textbf{Precision}. Unidades de medida en la escala correcta. Por ejemplo, si estamos mediendo la altura
+        de las personas, carecera de sentido proporcionar estas medidas en metros, ya que los posibles valores, seran 0, 1 y 2.
+        \item \textbf{Consistencia}. Valores logicos para cada tipo de campo. Un ejemplo seria un campo fecha, todos deberian
+        seguir el mismo formato.
+        \item \textbf{Interpretabilidad}. Legible. 
+        \item \textbf{Complitud}. Los datos deben ser consistentes en cada uno de las muestras. Las muestras pueden diferenciarse
+        \item unas de otras, como vemos en la Figura 2, pueden compartir algunos campos y otros no. Para un buen resultado, seria 
+        conveniente un grado de complitud alto para los datos que nos interesan en nuestro diseno.
+    \end{itemize}
+
 \begin{itemize}
 
     \item Informacion precisa
     \item Datos contrastados
-    \item Herramientas necesarias para que el usuario entienda la informacion y de porque
-    \item No decoracion que ensucie o distraiga de la informacion principal
-    \item Consecuente, que siga una secuencia logica
-    \item Estudio de las representaciones mas adecuadas para cada tipo de datos
+\end{itemize}
+
+\subsection{Util}
+
+\subsection{Personalizacion}
+
+\begin{itemize}
+
+      \item Herramientas necesarias para que el usuario entienda la informacion y de porque
+ 
     \item fuentes fiables, actualizacion periodica
 \end{itemize}
