working on accesible-practical

--- a/contents/accessible/theory.tex
+++ b/contents/accessible/theory.tex
@@ -82,13 +82,13 @@ y norte americano\footnote{\url{https://data.cityofnewyork.us/api/views/kku6-nxd
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=8cm]{ExampleOpenData1}
+    \includegraphics[width=8cm]{ExampleOpenDataEEUU}
     \caption{EEUU Open Portal.Demographic Statistics By Zip Code}
     \end{figure}
 
     \begin{figure}[h]
     \centering
-    \includegraphics[width=11.5cm]{ExampleOpenData2}
+    \includegraphics[width=11.5cm]{ExampleOpenDataEuropean}
     \caption{European Open Portal. Air pollutant concentrations 2015} 
    
  
