--- a/contents/introduction/motivation.tex
+++ b/contents/introduction/motivation.tex
@@ -16,7 +16,9 @@ usuario medio, ya que se enfrenta a multiples retos.\\
 En los siguientes apartados se realizar un recorrido por las etapas necesarias para hacer estos datos
 accesibles, relevantes y atractivos para el usuario medio.
 El objetivo de este capitulo es estipular los puntos necesarios para usar los datos de una manera provechosa y
-que nos ayude en nuestro dia a dia de una forma util. Estos conceptos se han aplicado en el proyecto Aire Guru, que acerca los datos a los usuarios de una manera
-facil, amigable, compresible y adaptados a sus necesidades.
+que nos ayude en nuestro dia a dia de una forma util. Estos conceptos se han aplicado en el proyecto Aire Guru, 
+que acerca los datos a los usuarios de una manera facil, amigable, compresible y adaptados a sus necesidades.\\
+
+Aire Guru es una herramienta web para la monitorizacion personalizada de la calidad del aire en Malaga.
 
 
