--- a/contents/relevant/theory.tex
+++ b/contents/relevant/theory.tex
@@ -45,7 +45,7 @@ de los datos. Ademas, habra que comprobar las siguientes premisas para cada unos
         conveniente un grado de complitud alto para los datos que nos interesan en nuestro diseno.
     \end{itemize}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \framebox{
 \vbox{\begin{tabbing} 
