--- a/chapter.tex
+++ b/chapter.tex
@@ -5,6 +5,7 @@
 \usetikzlibrary{arrows, decorations.markings}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{subfigure }
 \usepackage{verbatim}
 \graphicspath{ {images/} }
 \journal{Intelligent Environmental Data Analysis and Pollution Management}
