--- a/contents/accessible/evaluation.tex
+++ b/contents/accessible/evaluation.tex
@@ -4,3 +4,7 @@ sin tener que realizar ninguna descarga. Al eliminar esta barrera, el usuario no
 
 
 Evaluation - Repect the concept to prove and the technics applied on Aire Guru, is it correct? good point, bad points.....
+
+--y actualmente se esta trabajando en su traduccion 
+al ingles, para cubrir un rango mas amplio de su poblacion, ya que esta ciudad es cada vez mas cosmopolita.
+--reacio a identificarse
