modified accesible structure, added some points to relevant and compelling

--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -12,6 +12,10 @@ Es decir, aqui entra en juego la representacion de la informacion de una manera 
 del usuario.
 
 [....].
+
+--mision: atraer usuarios, crear un valor agregado, satisfaccion del usuario
+--crear una relacion con el producto
+--diferenciacion del producto 
 \begin{itemize}
 
 \item usuario no sabe que tiene la necesidad
@@ -47,3 +51,12 @@ Al represnentar la informacion sera incluido lo basicamente necesario, huyendo s
 \item Consecuente, que siga una secuencia logica
 \item Estudio de las representaciones mas adecuadas para cada tipo de datos
   \end{itemize}
+
+  Empatizar con el usuario
+  --Proteccion de su intimidad
+  --Minimizacion de captura de datosSiempre pedir permiso
+  Asegurar seguridad, integridad y confidencialidad
+  Transparencia, opcion a eliminar los datos
+  Explicar finalidad de los datos\\
+
+  
