--- a/contents/relevant/theory.tex
+++ b/contents/relevant/theory.tex
@@ -74,6 +74,12 @@ Document \\
 \end{itemize}
 \end{comment}
 
+\subsection{Enfoque al usuario}
+--Descubrir las necesidades, deseos y demandas.
+--Identificar las necesidades homogeneas del usuario medio o estrategias diferenciada (Enfocado a un segmento)
+Estudio de las necesidades de los usuarios, psicologico, social y economico.
+Actual
+Retroalimentacion, analisis del comportamiento del usuario para ve sus pautas
 
 \subsection{Util}
 Como mencionamos anteriormente, huiremos de toda aquella informacion vana, que no haga ninguna aportacion
@@ -95,7 +101,7 @@ reenforzamos la credibilidad de las representaciones que estamos realizando.
 --aplicabilidad
 --solventar problema en particular
 
-    
+
 
 \begin{itemize}
 
