--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -1,6 +1,56 @@
 \newpage
 \section{Accessible}
-\input{contents/accessible/theory.tex}
-\input{contents/accessible/practical.tex}
-\input{contents/accessible/evaluation.tex}
+\subsection*{}
+ 
+Los datos se consideran accesibles por el usuario cuando este no necesita realizar un esfuerzo desmesurado para
+poder obtenerlos, entenderlos y usarlos, es decir, aplicarlos a su situacion particular. Para lograr estos objetivos,
+es necesario que el usuario pueda acceder a ellos de una manera que le resulte familiar y en un lenguage y nomenclatura
+que pueda entender.\\ 
 
+En este apartado veremos si es posible el acceso a los datos por un usuario medio y como optimizar la accesibilidad.
+
+\input{contents/accessible/availableVsAccessible.tex}
+\input{contents/accessible/format.tex}
+\input{contents/accessible/dataInterpretation.tex}
+\input{contents/accessible/accessibilityOptimization.tex}
+
+
+
+
+
+\begin{comment}
+    
+
+    ----Respecto a polucion del aire 
+    Acudir a fuentes privadas
+    Instalacion de dispositivos
+  Done-  Ejemplos de bases de datos de distintas ciudades capitales
+
+
+    --no plataformas de pago
+Done -no instalacion de software
+-no complicaciones por parte del usuario.
+
+--Datos automatizados -- formato maquina
+--almacenamiento
+--conocimientos informaticos
+--analiticos
+--estudio de la materia, ver que es importante o no, contrastarlo
+--equipo multidisciplinario
+--informaticos no son expertos en medicina, por ejemplo.
+\begin{itemize}
+
+    \item datos disponible
+    \item no substraible por el usuario medio
+    \item imposible de tratar sin una estructura
+    \item no es posible de tener un historico
+    \item sin informacion complementaria que muestre informacion util
+    \item Desperdicio
+    \item \end{itemize}
+
+---Si fuera necesario, se le puede proporcionar las herramientas para que pueda entenderlo, en los 
+casos mas complicados donde se necesitan conocimientos previos sobre la materia.
+
+---Incluir concepto de muestras
+\end{comment}  
+    
