Reviewed Accessible following last structure

--- a/chapter.tex
+++ b/chapter.tex
@@ -7,7 +7,15 @@
 \usepackage{graphicx}
 \usepackage{subfigure }
 \usepackage{verbatim}
+\usepackage{amssymb}
+\newcommand{\done}{\item[\checkmark]}
+\newcommand{\crossed}{\item[$\times$]}
+\setcounter{secnumdepth}{4}
+\setcounter{tocdepth}{3}
+\hbadness=99999
+
 \graphicspath{ {images/} }
+
 \journal{Intelligent Environmental Data Analysis and Pollution Management}
 
 \begin{document}
