--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -1,5 +1,5 @@
 \newpage
-\section{Accessible}
+\section{Accessible.}
 \subsection*{}
  
 Los datos se consideran accesibles por el usuario cuando este no necesita realizar un esfuerzo desmesurado para
@@ -10,11 +10,21 @@ que pueda entender.\\
 En este apartado veremos si es posible el acceso a los datos por un usuario medio y como optimizar la accesibilidad.
 
 \input{contents/accessible/availableVsAccessible.tex}
-\input{contents/accessible/format.tex}
 \input{contents/accessible/dataInterpretation.tex}
+\input{contents/accessible/format.tex}
 \input{contents/accessible/accessibilityOptimization.tex}
 
-
+\begin{figure}[ht]
+  \centering
+  \framebox{
+  \vbox{\begin{tabbing} 
+  Check List \\
+  \hspace*{10mm} \ding{47} Point 1 \hspace*{25mm} \= \ding{47} Point B \\
+   
+  \end{tabbing}}%
+  
+  }
+  \end{figure}
 
 
 
